--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>springmvcinterceptor</finalName>
+		<finalName>kios</finalName>
 
 		<plugins>
 			<!-- Eclipse project -->
